--- a/README.mediawiki
+++ b/README.mediawiki
@@ -799,6 +799,13 @@ Bitcoin (BSV) Improvement Proposals. To collaborate on new BIPs, please join [ht
 | Aleksandar Dinkov
 | Standard
 | Draft
+|-
+| [[bip-0283.mediawiki|283]]
+| Applications
+| Hierarchical Deterministic symmetric encryption keys for Metanet ROOT nodes
+| Jaime Salom
+| Standard
+| Proposed
 |}
 
 
